GC算法和常用的调优经验